--- a/aulas/aula11/ex009.html
+++ b/aulas/aula11/ex009.html
@@ -7,16 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nacionalidade</title>
     <style>
+        body {
+            background-color: #91B6F2;
+            font-family: Arial, Helvetica, sans-serif;
+            text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.185);
+        }
 
+        h1 {
+            text-align: center;
+            color: #224070;
+        }
+
+        main {
+            background-color: white;
+            padding: 10px;
+            border-radius: 10px;
+            margin: 0 auto;
+            top: 50%;
+            max-width: 500px;
+            box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.253);
+        }
+
+        #botao {
+            display: block;
+            margin: auto;
+            margin-top: 10px;
+        }
     </style>
 </head>
 
 <body>
-    <h1>Verificando Nacionalidade</h1>
-    Digite o seu país de nascimento:
-    <input type="text" name="txtn" id="txtn">
-    <input type="button" value="Verificar" id="botao">
-    <div id="resultado"></div>
+    <main>
+        <h1>Verificando Nacionalidade</h1>
+        Digite o seu país de nascimento:
+        <input type="text" name="txtn" id="txtn">
+        <input type="button" value="Verificar" id="botao">
+        <div id="resultado"></div>
+    </main>
     <script>
         var botao = window.document.getElementById('botao');
         botao.addEventListener('click', verificarNascionalidade);
@@ -26,11 +53,11 @@
             var resultado = window.document.getElementById('resultado');
             var país = txtn.value;
 
-            resultado.innerHTML = `Seu país de nascimento é: ${país}<br>`;
+            resultado.innerHTML = `<p>Seu país de nascimento é: ${país}<p>`;
             if (país == 'Brasil' || país == 'brasil') {
-                resultado.innerHTML += 'Você é brasileiro!';
+                resultado.innerHTML += '<p>Você é brasileiro!</p>';
             } else {
-                resultado.innerHTML += 'Você é estrangeiro!';
+                resultado.innerHTML += '<p>Você é estrangeiro!</p>';
             }
         }
     </script>
